corrected routes not to have /api at the start
