# openapi/openapi-all.yaml
@@ -22,7 +22,7 @@ paths:
                   status:
                     type: "string"
                     example: "ok"
-  /api/tasks:
+  /tasks:
     get:
       summary: Get list of tasks
       responses:
@@ -55,7 +55,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorInvalidBody"
 
-  /api/users:
+  /users:
     get:
       summary: Get list of users
       responses:
@@ -85,7 +85,7 @@ paths:
                 $ref: "#/components/schemas/ErrorInvalidBody"
 
 
-  /api/projects:
+  /projects:
     get:
       summary: Get list of users
       responses:
@@ -114,7 +114,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorInvalidBody"
 
-  /api/tasks/{id}:
+  /tasks/{id}:
     get:
       summary: Get task from list
       parameters:
@@ -227,7 +227,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorNotFound"
 
-  /api/users/{name}:
+  /users/{name}:
     get:
       summary: Get user from list
       parameters:
@@ -340,7 +340,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorNotFound"
 
-  /api/projects/{name}:
+  /projects/{name}:
     get:
       summary: Get project from list
       parameters:
